// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker prop: appendToBody = false 1`] = `
<body>
  <div
    data-v-app=""
  />
  <div
    data-v-app=""
  >
    <div
      class="mx-datepicker"
    >
      <div
        class="mx-input-wrapper"
      >
        <input
          autocomplete="off"
          class="mx-input"
          name="date"
          type="text"
          value="2021-11-11"
        />
        <i
          class="mx-icon-clear"
        >
          <i
            class="locke locke-close"
            style="font-size: 18px;"
          />
        </i>
        <i
          class="mx-icon-calendar"
        >
          
          <i
            class="locke locke-calendar"
            style="font-size: 18px;"
          />
          
        </i>
      </div>
      <!--teleport start-->
      <transition-stub
        appear="false"
        css="true"
        name="mx-zoom-in-down"
        persisted="false"
      >
        <div
          class="mx-datepicker-main mx-datepicker-popup "
          style="position: absolute;"
        >
          
          <!---->
          <div
            class="mx-datepicker-content"
          >
            <!---->
            <div
              class="mx-expand"
            >
              <div
                class="mx-datepicker-body"
              >
                <div
                  class="mx-calendar mx-calendar-panel-date"
                >
                  <div
                    class="mx-calendar-header"
                  >
                    <!---->
                    <!---->
                    <button
                      class="mx-btn mx-btn-text mx-btn-icon-left"
                      type="button"
                    >
                      <i
                        class="mx-icon-left"
                      />
                    </button>
                    <button
                      class="mx-btn mx-btn-text mx-btn-icon-right"
                      type="button"
                    >
                      <i
                        class="mx-icon-right"
                      />
                    </button>
                    <span
                      class="mx-calendar-header-label"
                    >
                      
                      
                      <button
                        class="mx-btn mx-btn-text mx-btn-current-month"
                        type="button"
                      >
                        November
                      </button>
                      <button
                        class="mx-btn mx-btn-text mx-btn-current-year"
                        type="button"
                      >
                        2021
                      </button>
                      
                      
                    </span>
                  </div>
                  <div
                    class="mx-calendar-content"
                  >
                    <table
                      class="mx-table mx-table-date"
                    >
                      <thead>
                        <tr>
                          <!---->
                          
                          <th>
                            S
                          </th>
                          <th>
                            M
                          </th>
                          <th>
                            T
                          </th>
                          <th>
                            W
                          </th>
                          <th>
                            T
                          </th>
                          <th>
                            F
                          </th>
                          <th>
                            S
                          </th>
                          
                        </tr>
                      </thead>
                      <tbody>
                        
                        <tr
                          class="mx-date-row"
                        >
                          <!---->
                          
                          <td
                            class="cell end-month not-current-month"
                            data-index="0,0"
                            data-value="31"
                            title="2021-10-31"
                          >
                            <div>
                              31
                            </div>
                          </td>
                          <td
                            class="cell start-month"
                            data-index="0,1"
                            data-value="1"
                            title="2021-11-01"
                          >
                            <div>
                              1
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="0,2"
                            data-value="2"
                            title="2021-11-02"
                          >
                            <div>
                              2
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="0,3"
                            data-value="3"
                            title="2021-11-03"
                          >
                            <div>
                              3
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="0,4"
                            data-value="4"
                            title="2021-11-04"
                          >
                            <div>
                              4
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="0,5"
                            data-value="5"
                            title="2021-11-05"
                          >
                            <div>
                              5
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="0,6"
                            data-value="6"
                            title="2021-11-06"
                          >
                            <div>
                              6
                            </div>
                          </td>
                          
                        </tr>
                        <tr
                          class="mx-date-row"
                        >
                          <!---->
                          
                          <td
                            class="cell"
                            data-index="1,0"
                            data-value="7"
                            title="2021-11-07"
                          >
                            <div>
                              7
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="1,1"
                            data-value="8"
                            title="2021-11-08"
                          >
                            <div>
                              8
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="1,2"
                            data-value="9"
                            title="2021-11-09"
                          >
                            <div>
                              9
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="1,3"
                            data-value="10"
                            title="2021-11-10"
                          >
                            <div>
                              10
                            </div>
                          </td>
                          <td
                            class="cell active"
                            data-index="1,4"
                            data-value="11"
                            title="2021-11-11"
                          >
                            <div>
                              11
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="1,5"
                            data-value="12"
                            title="2021-11-12"
                          >
                            <div>
                              12
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="1,6"
                            data-value="13"
                            title="2021-11-13"
                          >
                            <div>
                              13
                            </div>
                          </td>
                          
                        </tr>
                        <tr
                          class="mx-date-row"
                        >
                          <!---->
                          
                          <td
                            class="cell"
                            data-index="2,0"
                            data-value="14"
                            title="2021-11-14"
                          >
                            <div>
                              14
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="2,1"
                            data-value="15"
                            title="2021-11-15"
                          >
                            <div>
                              15
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="2,2"
                            data-value="16"
                            title="2021-11-16"
                          >
                            <div>
                              16
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="2,3"
                            data-value="17"
                            title="2021-11-17"
                          >
                            <div>
                              17
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="2,4"
                            data-value="18"
                            title="2021-11-18"
                          >
                            <div>
                              18
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="2,5"
                            data-value="19"
                            title="2021-11-19"
                          >
                            <div>
                              19
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="2,6"
                            data-value="20"
                            title="2021-11-20"
                          >
                            <div>
                              20
                            </div>
                          </td>
                          
                        </tr>
                        <tr
                          class="mx-date-row"
                        >
                          <!---->
                          
                          <td
                            class="cell"
                            data-index="3,0"
                            data-value="21"
                            title="2021-11-21"
                          >
                            <div>
                              21
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="3,1"
                            data-value="22"
                            title="2021-11-22"
                          >
                            <div>
                              22
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="3,2"
                            data-value="23"
                            title="2021-11-23"
                          >
                            <div>
                              23
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="3,3"
                            data-value="24"
                            title="2021-11-24"
                          >
                            <div>
                              24
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="3,4"
                            data-value="25"
                            title="2021-11-25"
                          >
                            <div>
                              25
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="3,5"
                            data-value="26"
                            title="2021-11-26"
                          >
                            <div>
                              26
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="3,6"
                            data-value="27"
                            title="2021-11-27"
                          >
                            <div>
                              27
                            </div>
                          </td>
                          
                        </tr>
                        <tr
                          class="mx-date-row"
                        >
                          <!---->
                          
                          <td
                            class="cell"
                            data-index="4,0"
                            data-value="28"
                            title="2021-11-28"
                          >
                            <div>
                              28
                            </div>
                          </td>
                          <td
                            class="cell"
                            data-index="4,1"
                            data-value="29"
                            title="2021-11-29"
                          >
                            <div>
                              29
                            </div>
                          </td>
                          <td
                            class="cell end-month"
                            data-index="4,2"
                            data-value="30"
                            title="2021-11-30"
                          >
                            <div>
                              30
                            </div>
                          </td>
                          <td
                            class="cell start-month not-current-month"
                            data-index="4,3"
                            data-value="1"
                            title="2021-12-01"
                          >
                            <div>
                              1
                            </div>
                          </td>
                          <td
                            class="cell not-current-month"
                            data-index="4,4"
                            data-value="2"
                            title="2021-12-02"
                          >
                            <div>
                              2
                            </div>
                          </td>
                          <td
                            class="cell not-current-month"
                            data-index="4,5"
                            data-value="3"
                            title="2021-12-03"
                          >
                            <div>
                              3
                            </div>
                          </td>
                          <td
                            class="cell not-current-month"
                            data-index="4,6"
                            data-value="4"
                            title="2021-12-04"
                          >
                            <div>
                              4
                            </div>
                          </td>
                          
                        </tr>
                        <tr
                          class="mx-date-row"
                        >
                          <!---->
                          
                          <td
                            class="cell not-current-month"
                            data-index="5,0"
                            data-value="5"
                            title="2021-12-05"
                          >
                            <div>
                              5
                            </div>
                          </td>
                          <td
                            class="cell not-current-month"
                            data-index="5,1"
                            data-value="6"
                            title="2021-12-06"
                          >
                            <div>
                              6
                            </div>
                          </td>
                          <td
                            class="cell not-current-month"
                            data-index="5,2"
                            data-value="7"
                            title="2021-12-07"
                          >
                            <div>
                              7
                            </div>
                          </td>
                          <td
                            class="cell not-current-month"
                            data-index="5,3"
                            data-value="8"
                            title="2021-12-08"
                          >
                            <div>
                              8
                            </div>
                          </td>
                          <td
                            class="cell not-current-month"
                            data-index="5,4"
                            data-value="9"
                            title="2021-12-09"
                          >
                            <div>
                              9
                            </div>
                          </td>
                          <td
                            class="cell not-current-month"
                            data-index="5,5"
                            data-value="10"
                            title="2021-12-10"
                          >
                            <div>
                              10
                            </div>
                          </td>
                          <td
                            class="cell not-current-month"
                            data-index="5,6"
                            data-value="11"
                            title="2021-12-11"
                          >
                            <div>
                              11
                            </div>
                          </td>
                          
                        </tr>
                        
                      </tbody>
                    </table>
                  </div>
                </div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          
        </div>
      </transition-stub>
      <!--teleport end-->
    </div>
  </div>
  
  
</body>
`;

exports[`DatePicker prop: appendToBody = true 1`] = `
<body>
  <div
    data-v-app=""
  >
    <div
      class="mx-datepicker"
    >
      <div
        class="mx-input-wrapper"
      >
        <input
          autocomplete="off"
          class="mx-input"
          name="date"
          type="text"
          value="2021-11-11"
        />
        <i
          class="mx-icon-clear"
        >
          <i
            class="locke locke-close"
            style="font-size: 18px;"
          />
        </i>
        <i
          class="mx-icon-calendar"
        >
          
          <i
            class="locke locke-calendar"
            style="font-size: 18px;"
          />
          
        </i>
      </div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
  
  <transition-stub
    appear="false"
    css="true"
    name="mx-zoom-in-down"
    persisted="false"
  >
    <div
      class="mx-datepicker-main mx-datepicker-popup "
      style="position: absolute;"
    >
      
      <!---->
      <div
        class="mx-datepicker-content"
      >
        <!---->
        <div
          class="mx-expand"
        >
          <div
            class="mx-datepicker-body"
          >
            <div
              class="mx-calendar mx-calendar-panel-date"
            >
              <div
                class="mx-calendar-header"
              >
                <!---->
                <!---->
                <button
                  class="mx-btn mx-btn-text mx-btn-icon-left"
                  type="button"
                >
                  <i
                    class="mx-icon-left"
                  />
                </button>
                <button
                  class="mx-btn mx-btn-text mx-btn-icon-right"
                  type="button"
                >
                  <i
                    class="mx-icon-right"
                  />
                </button>
                <span
                  class="mx-calendar-header-label"
                >
                  
                  
                  <button
                    class="mx-btn mx-btn-text mx-btn-current-month"
                    type="button"
                  >
                    November
                  </button>
                  <button
                    class="mx-btn mx-btn-text mx-btn-current-year"
                    type="button"
                  >
                    2021
                  </button>
                  
                  
                </span>
              </div>
              <div
                class="mx-calendar-content"
              >
                <table
                  class="mx-table mx-table-date"
                >
                  <thead>
                    <tr>
                      <!---->
                      
                      <th>
                        S
                      </th>
                      <th>
                        M
                      </th>
                      <th>
                        T
                      </th>
                      <th>
                        W
                      </th>
                      <th>
                        T
                      </th>
                      <th>
                        F
                      </th>
                      <th>
                        S
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody>
                    
                    <tr
                      class="mx-date-row"
                    >
                      <!---->
                      
                      <td
                        class="cell end-month not-current-month"
                        data-index="0,0"
                        data-value="31"
                        title="2021-10-31"
                      >
                        <div>
                          31
                        </div>
                      </td>
                      <td
                        class="cell start-month"
                        data-index="0,1"
                        data-value="1"
                        title="2021-11-01"
                      >
                        <div>
                          1
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="0,2"
                        data-value="2"
                        title="2021-11-02"
                      >
                        <div>
                          2
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="0,3"
                        data-value="3"
                        title="2021-11-03"
                      >
                        <div>
                          3
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="0,4"
                        data-value="4"
                        title="2021-11-04"
                      >
                        <div>
                          4
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="0,5"
                        data-value="5"
                        title="2021-11-05"
                      >
                        <div>
                          5
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="0,6"
                        data-value="6"
                        title="2021-11-06"
                      >
                        <div>
                          6
                        </div>
                      </td>
                      
                    </tr>
                    <tr
                      class="mx-date-row"
                    >
                      <!---->
                      
                      <td
                        class="cell"
                        data-index="1,0"
                        data-value="7"
                        title="2021-11-07"
                      >
                        <div>
                          7
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="1,1"
                        data-value="8"
                        title="2021-11-08"
                      >
                        <div>
                          8
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="1,2"
                        data-value="9"
                        title="2021-11-09"
                      >
                        <div>
                          9
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="1,3"
                        data-value="10"
                        title="2021-11-10"
                      >
                        <div>
                          10
                        </div>
                      </td>
                      <td
                        class="cell active"
                        data-index="1,4"
                        data-value="11"
                        title="2021-11-11"
                      >
                        <div>
                          11
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="1,5"
                        data-value="12"
                        title="2021-11-12"
                      >
                        <div>
                          12
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="1,6"
                        data-value="13"
                        title="2021-11-13"
                      >
                        <div>
                          13
                        </div>
                      </td>
                      
                    </tr>
                    <tr
                      class="mx-date-row"
                    >
                      <!---->
                      
                      <td
                        class="cell"
                        data-index="2,0"
                        data-value="14"
                        title="2021-11-14"
                      >
                        <div>
                          14
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="2,1"
                        data-value="15"
                        title="2021-11-15"
                      >
                        <div>
                          15
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="2,2"
                        data-value="16"
                        title="2021-11-16"
                      >
                        <div>
                          16
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="2,3"
                        data-value="17"
                        title="2021-11-17"
                      >
                        <div>
                          17
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="2,4"
                        data-value="18"
                        title="2021-11-18"
                      >
                        <div>
                          18
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="2,5"
                        data-value="19"
                        title="2021-11-19"
                      >
                        <div>
                          19
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="2,6"
                        data-value="20"
                        title="2021-11-20"
                      >
                        <div>
                          20
                        </div>
                      </td>
                      
                    </tr>
                    <tr
                      class="mx-date-row"
                    >
                      <!---->
                      
                      <td
                        class="cell"
                        data-index="3,0"
                        data-value="21"
                        title="2021-11-21"
                      >
                        <div>
                          21
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="3,1"
                        data-value="22"
                        title="2021-11-22"
                      >
                        <div>
                          22
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="3,2"
                        data-value="23"
                        title="2021-11-23"
                      >
                        <div>
                          23
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="3,3"
                        data-value="24"
                        title="2021-11-24"
                      >
                        <div>
                          24
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="3,4"
                        data-value="25"
                        title="2021-11-25"
                      >
                        <div>
                          25
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="3,5"
                        data-value="26"
                        title="2021-11-26"
                      >
                        <div>
                          26
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="3,6"
                        data-value="27"
                        title="2021-11-27"
                      >
                        <div>
                          27
                        </div>
                      </td>
                      
                    </tr>
                    <tr
                      class="mx-date-row"
                    >
                      <!---->
                      
                      <td
                        class="cell"
                        data-index="4,0"
                        data-value="28"
                        title="2021-11-28"
                      >
                        <div>
                          28
                        </div>
                      </td>
                      <td
                        class="cell"
                        data-index="4,1"
                        data-value="29"
                        title="2021-11-29"
                      >
                        <div>
                          29
                        </div>
                      </td>
                      <td
                        class="cell end-month"
                        data-index="4,2"
                        data-value="30"
                        title="2021-11-30"
                      >
                        <div>
                          30
                        </div>
                      </td>
                      <td
                        class="cell start-month not-current-month"
                        data-index="4,3"
                        data-value="1"
                        title="2021-12-01"
                      >
                        <div>
                          1
                        </div>
                      </td>
                      <td
                        class="cell not-current-month"
                        data-index="4,4"
                        data-value="2"
                        title="2021-12-02"
                      >
                        <div>
                          2
                        </div>
                      </td>
                      <td
                        class="cell not-current-month"
                        data-index="4,5"
                        data-value="3"
                        title="2021-12-03"
                      >
                        <div>
                          3
                        </div>
                      </td>
                      <td
                        class="cell not-current-month"
                        data-index="4,6"
                        data-value="4"
                        title="2021-12-04"
                      >
                        <div>
                          4
                        </div>
                      </td>
                      
                    </tr>
                    <tr
                      class="mx-date-row"
                    >
                      <!---->
                      
                      <td
                        class="cell not-current-month"
                        data-index="5,0"
                        data-value="5"
                        title="2021-12-05"
                      >
                        <div>
                          5
                        </div>
                      </td>
                      <td
                        class="cell not-current-month"
                        data-index="5,1"
                        data-value="6"
                        title="2021-12-06"
                      >
                        <div>
                          6
                        </div>
                      </td>
                      <td
                        class="cell not-current-month"
                        data-index="5,2"
                        data-value="7"
                        title="2021-12-07"
                      >
                        <div>
                          7
                        </div>
                      </td>
                      <td
                        class="cell not-current-month"
                        data-index="5,3"
                        data-value="8"
                        title="2021-12-08"
                      >
                        <div>
                          8
                        </div>
                      </td>
                      <td
                        class="cell not-current-month"
                        data-index="5,4"
                        data-value="9"
                        title="2021-12-09"
                      >
                        <div>
                          9
                        </div>
                      </td>
                      <td
                        class="cell not-current-month"
                        data-index="5,5"
                        data-value="10"
                        title="2021-12-10"
                      >
                        <div>
                          10
                        </div>
                      </td>
                      <td
                        class="cell not-current-month"
                        data-index="5,6"
                        data-value="11"
                        title="2021-12-11"
                      >
                        <div>
                          11
                        </div>
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
              </div>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      
    </div>
  </transition-stub>
  
</body>
`;

exports[`DatePicker prop: input props 1`] = `
<div
  class="mx-datepicker"
>
  <div
    class="mx-input-wrapper"
  >
    <input
      autocomplete="off"
      class="mx-input"
      name="date"
      type="text"
      value="2019-05-10"
    />
    <i
      class="mx-icon-clear"
    >
      <i
        class="locke locke-close"
        style="font-size: 18px;"
      />
    </i>
    <i
      class="mx-icon-calendar"
    >
      
      <i
        class="locke locke-calendar"
        style="font-size: 18px;"
      />
      
    </i>
  </div>
  <!--teleport start-->
  <!--teleport end-->
</div>
`;

exports[`DatePicker prop: input props 2`] = `
<div
  class="mx-datepicker"
>
  <div
    class="mx-input-wrapper"
  >
    <input
      autocomplete="off"
      class="test"
      id="test"
      name="test"
      placeholder="test placeholder"
      readonly=""
      type="text"
      value="2019-05-10"
    />
    <!---->
    <i
      class="mx-icon-calendar"
    >
      
      <i
        class="locke locke-calendar"
        style="font-size: 18px;"
      />
      
    </i>
  </div>
  <!--teleport start-->
  <!--teleport end-->
</div>
`;
